# LoginWindow

./: CMakeLists.txt  CMakeUserPresets.json  CashierWindowClass.cpp  CashierWindowClass.h  CashierWindowClass.ui  ClickableLabel.cpp  ClickableLabel.h  CustomerDetailDialog.cpp  CustomerDetailDialog.h  CustomerDetailDialog.ui  FinanceChart.cpp  FinanceChart.h  FinanceChart.ui  GoodsDetailDialog.cpp  GoodsDetailDialog.h  GoodsDetailDialog.ui  GoodsWidget.cpp  GoodsWidget.h  GoodsWidget.ui  GoodsWidgetPagination.cpp  GoodsWidgetPagination.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  ManagerWindowClass.cpp  ManagerWindowClass.h  ManagerWindowClass.ui  OracleDB.cpp  OracleDB.h  OrderDetailDialog.cpp  OrderDetailDialog.h  OrderDetailDialog.ui  OrderPagination.cpp  OrderPagination.h  ProductDetailDialog.cpp  ProductDetailDialog.h  ProductDetailDialog.ui  ProductWidget.cpp  ProductWidget.h  ProductWidget.ui  (+19 more)
static/: buy.html  index.html  login.html  orders.html  personal.html  register.html
